# LOG_GIGANTIC_TROJAN

./: CMakeLists.txt  README.md
LOG_GIGANTIC_TROJAN/: Bin.cpp  Bin.h  CMakeLists.txt  Clipboard.cpp  Clipboard.h  Core.cpp  Core.h  Decryptor.cpp  Decryptor.h  KeyMaster.cpp  KeyMaster.h  KeyMasterUtils.cpp  KeyMasterUtils.h  ScreenPrank.cpp  ScreenPrank.h  main.cpp
Sigma_Clip_DLL/: Sigma_Clip_DLL.cbp  Sigma_Clip_DLL.depend  Sigma_Clip_DLL.layout  main.cpp  main.h
Sigma_Clip_EXEC/: Sigma_Clip_EXEC.cbp  Sigma_Clip_EXEC.depend  Sigma_Clip_EXEC.layout  Sigma_Clip_EXEC.rar  main.cpp  res.buf  resources.h
